# pylint-keyword-only-args-plugin

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
pylint_keyword_only_args_plugin/: __init__.py  checker.py  keyword_only_args.py
tests/: test_plugin.py
